Добавил взаимодействие с бд

--- a/MetrologicalServiceEnterprise.View/MetrologicalServiceEnterprise.View.csproj
+++ b/MetrologicalServiceEnterprise.View/MetrologicalServiceEnterprise.View.csproj
@@ -8,4 +8,15 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MetrologicalServiceEnterprise.ViewModel\MetrologicalServiceEnterprise.ViewModel.csproj" />
+  </ItemGroup>
+
 </Project>
