--- a/MetrologicalServiceEnterprise.View/appsettings.json
+++ b/MetrologicalServiceEnterprise.View/appsettings.json
@@ -1,5 +1,5 @@
 {
   "ConnectionStrings": {
-    "MetrologicalServiceEnterpriseCS": "Host=localhost;Port=5432;Database=MetrologicalServiceEnterprise;Username=postgres;Password=1994"
+    "DbConnectionString": "Host=localhost;Port=5432;Database=MetrologicalServiceEnterprise;Username=postgres;Password=1994"
   }
 }
